updated image content

--- a/app/views/create-event/images.html
+++ b/app/views/create-event/images.html
@@ -35,7 +35,7 @@
 
 				<ul class="error-summary-list">
 					{% if missingImage %}
-					<li><a href="#image-and-guidance">Main event image: missing</a></li>
+						<li><a href="#image-and-guidance">Main event image: missing</a></li>
 					{% endif %}
 				</ul>
 
@@ -112,9 +112,10 @@
 
 
 
-								  <p><span class="bold">Copyright</span><br>
-									  Never use images you've found on the web, without verifying their copyright and usage rights.
-									  <br>Meet branding guidelines if you use royalty-free services. e.g. <a href="https://unsplash.com/" target="_blank">Unplash</a>
+								  <p><span class="bold">Sourcing images from elsewhere</span><br>
+
+									  If you source images from outside the GREAT image library, you need to have gained explicit permission from the copyright holder for their commercial reuse.
+									  <br>Never use images found through general web search. <a href="https://unsplash.com/" target="_blank">Unplash</a> is an example of a legitimate free stock image library.
 								  </p>
 							  </div>
 						  </details>
