turnover and map link update

--- a/app/views/create-event/attendees.html
+++ b/app/views/create-event/attendees.html
@@ -48,16 +48,33 @@
 
 		  <p>The following default fields will be included on your event registration form:</p>
 		  <ul class="list list-bullet">
-			  <li>full name</li>
+			  <li>first name</li>
+			  <li>last name</li>
 			  <li>job title</li>
 			  <li>business  name</li>
 			  <li>full business address</li>
 			  <li>phone number</li>
 			  <li>email address</li>
 			  <li>primary sector of business</li>
-			  <li>company website (optional)</li>
-			  <li>annual turnover</li>
+			  <li>company website</li>
 			  <li>export experience level</li>
+			  <li>annual turnover</li>
+			  <details role="group" style="width:650px; margin-bottom:10px;">
+				  <summary role="button" aria-controls="details-content-0" aria-expanded="false"><span class="summary">See turnover brackets</span></summary>
+				  <div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
+
+
+					  <p style="margin-bottom:5px;">Turnover levels:</p>
+					  <ul class="list list-bullet">
+						  <li>£0 &nbsp;to&nbsp; £150,000</li>
+						  <li>£150,001 &nbsp;to&nbsp; £500,000</li>
+						  <li>£500,001 &nbsp;to&nbsp; £2,000,000</li>
+						  <li>£2,000,001 &nbsp;to&nbsp; £5,000,000</li>
+						  <li>£5,000,001 &nbsp;to&nbsp; £34,000,000</li>
+					  </ul>
+
+				  </div>
+			  </details>
 		  </ul>
 
 		  <br>
