event waiting list update content

--- a/app/views/create-event/tickets.html
+++ b/app/views/create-event/tickets.html
@@ -114,31 +114,31 @@
 			  <!--  message user will see when all tickets are gone -->
 			  <div class="form-group" style="margin-top:0px; margin-bottom:0px">
 				  <label class="form-label-bold">
-					  When capacity is reached
+					  When capacity is reached, would you like to open a waiting list?
 				  </label>
 				  <div class="form-date" style="margin-top:5px">
 					  <div class="multiple-choice" style="margin-bottom:10px">
 						  <input id="waiting-list-no" type="radio" name="waiting-list" value="no" checked="checked">
-						  <label for="waiting-list-no">Close registrations only</label>
+						  <label for="waiting-list-no">No, just close registrations</label>
 					  </div>
 					  <div class="multiple-choice" style="margin-bottom:10px"  data-target="waiting-list-questions-area">
 						  <input id="waiting-list-yes" type="radio" name="waiting-list" value="yes" >
-						  <label for="waiting-list-yes">Open waiting list</label>
+						  <label for="waiting-list-yes">Yes, open a waiting list</label>
 					  </div>
 				  </div>
 
 				  <div class="form-group panel panel-border-narrow js-hidden" style="padding-bottom:12px;" id="waiting-list-questions-area">
 					  <label class="form-label-bold">
-						  When places become available
+						  When a place becomes available
 					  </label>
 					  <div class="form-date" style="margin-top:5px">
 						  <div class="multiple-choice" style="margin-bottom:10px">
 							  <input id="waiting-list-auto" type="radio" name="waiting-list-free-up" value="no" checked="checked">
-							  <label for="waiting-list-no">Automatically offer places</label>
+							  <label for="waiting-list-auto">Automatically offer it to whoever is at the top of waiting list</label>
 						  </div>
 						  <div class="multiple-choice" style="margin-bottom:10px"  >
 							  <input id="waiting-list-manual" type="radio" name="waiting-list-free-up" value="yes" >
-							  <label for="waiting-list-yes">I will select who if offered a place</label>
+							  <label for="waiting-list-manual">Manually select who you want to offer the place to</label>
 						  </div>
 					  </div>
 				  </div>
