images content update

--- a/app/views/create-event/images-preview.html
+++ b/app/views/create-event/images-preview.html
@@ -89,22 +89,22 @@
 							 style="margin-top:0px;"><span class="summary">More details</span></summary>
 					<div class="panel panel-border-narrow" id="details-content-0" aria-hidden="true"  style="margin-top:0px; margin-bottom:30px; padding-bottom:10px;">
 						<p style="margin-bottom:10px;">
-							<span class="bold">We use a 3:2 image shape</span><br>
+							<span class="bold">Image aspect ratio used: 3:2</span><br>
 							<img src="/public/images/3by2.jpg" style="width:150px;height:100px;">
 						</p>
 
-						<div style="margin-top:30px; display:flex; flex-direction: row;">
-							<div style="margin-right:80px;">
+						<div style="margin-top:30px; display:flex; flex-direction: row; width:720px;">
+							<div style="margin-right:50px; width:450px;">
 								<p style="margin-bottom:10px;">
-									<span class="bold">Uploading wide images</span><br>
-									We hide the sides.
+									<span class="bold">For landscape images</span><br>
+									Left and right-hand margins will be cropped
 								</p>
 								<img src="/public/images/skyline-wide.jpg" style="width:226px;height:100px;">
 							</div>
 							<div>
-								<p style="margin-bottom:10px;">
-									<span class="bold">Uploading tall images</span><br>
-									We hide the top and bottom.
+								<p style="margin-bottom:10px;  width:300px;">
+									<span class="bold">For portrait images</span><br>
+									Top and bottom will be cropped
 								</p>
 								<img src="/public/images/skyline-tall.jpg" style="width:100px;height:147px;">
 
