--- a/app/views/create-event/additional-questions.html
+++ b/app/views/create-event/additional-questions.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% set loggedIn = true %}
 {% block page_title %}
-
   GOV.UK prototype kit
 {% endblock %}
 
@@ -220,7 +219,7 @@
 		  <fieldset class="form-group js-hidden" id="show-answers" style="margin-bottom:10px;">
 
 			  <!--   THE ANSWERS -->
-			  <div class="form-group panel panel-border-narrow {% if errorAnswersError %} form-group-error" {% endif %}" style="margin-bottom:0px; margin-top:10px;" >
+			  <div class="form-group panel panel-border-narrow {% if errorAnswersError %} form-group-error {% endif %}" style="margin-bottom:0px; margin-top:10px;" >
 
 
 
@@ -233,25 +232,58 @@
 					  {% endif %}
 				  </label>
 
-				  <div style="width:50%; float:left; margin-top:5px">
-					  <input type="text" class="form-control  {% if errorAnswersEmpty %} form-control-error {% endif %}"
-							 id="answer-1" name="answer-1" value="{{ session.data['answer-1'] }}" style="width:90%; margin-bottom: 15px;">
+				  <div style="width:100%; float:left; margin-top:5px">
+					  <div style="display:flex; flex-direction: row;">
+						  <input type="text" class="form-control  {% if errorAnswersEmpty %} form-control-error {% endif %}"
+								 id="answer-1" name="answer-1" value="{{ session.data['answer-1'] }}" style="width:45%; margin-bottom: 15px; margin-right:20px;">
+						  <div class="multiple-choice">
+							  <input id="answer-1-checkbox" name="answer-1-checkbox" type="checkbox" value="yes" {% if sector2Selected == true %} checked="checked" {% endif %}>
+							  <label for="answer-1-checkbox">If selected request details</label>
+						  </div>
+					  </div>
 
-					  <input type="text" class="form-control  {% if errorAnswersEmpty %} form-control-error {% endif %}
-															   {% if errorAnswersOnlyOneEntered %}  form-control-error {% endif %}"
-							 id="answer-2" name="answer-2" value="{{ session.data['answer-2'] }}" style="width:90%; margin-bottom: 15px;">
+
+					  <div style="display:flex; flex-direction: row;">
+						  <input type="text" class="form-control  {% if errorAnswersEmpty or errorAnswersOnlyOneEntered %} form-control-error {% endif %}"
+								 id="answer-2" name="answer-2" value="{{ session.data['answer-2'] }}" style="width:45%; margin-bottom: 15px; margin-right:20px;">
+						  <div class="multiple-choice">
+							  <input id="answer-2-checkbox" name="answer-2-checkbox" type="checkbox" value="yes" {% if sector2Selected == true %} checked="checked" {% endif %}>
+							  <label for="answer-2-checkbox">If selected request details</label>
+						  </div>
+					  </div>
+
 
 					  <p id="answer-3-add" style="color: #005ea5; text-decoration: underline; cursor: pointer;" onclick="show3()">Add another answer</p>
-					  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
-							 id="answer-3-box" name="answer-3" value="{{ session.data['answer-3'] }}">
+					  <div style="display:flex; flex-direction: row;  display:none;" id="answer-3-box">
+						  <input type="text" class="form-control"
+								 id="answer-3" name="answer-3" value="{{ session.data['answer-3'] }}" style="width:45%; margin-bottom: 15px; margin-right:20px;">
+						  <div class="multiple-choice">
+							  <input id="answer-3-checkbox" name="answer-3-checkbox" type="checkbox" value="yes">
+							  <label for="answer-3-checkbox">If selected request details</label>
+						  </div>
+					  </div>
+
 
 					  <p id="answer-4-add" style="color: #005ea5; text-decoration: underline; display:none; cursor: pointer" onclick="show4()">Add another answer</p>
-					  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
-							 id="answer-4-box" name="answer-4" value="{{ session.data['answer-4'] }}">
+					  <div style="display:flex; flex-direction: row;  display:none;" id="answer-4-box">
+						  <input type="text" class="form-control"
+								 id="answer-4" name="answer-4" value="{{ session.data['answer-4'] }}" style="width:45%; margin-bottom: 15px; margin-right:20px;">
+						  <div class="multiple-choice">
+							  <input id="answer-4-checkbox" name="answer-4-checkbox" type="checkbox" value="yes">
+							  <label for="answer-4-checkbox">If selected request details</label>
+						  </div>
+					  </div>
+
 
 					  <p id="answer-5-add" style="color: #005ea5; text-decoration: underline; display:none; cursor: pointer" onclick="show5()">Add another answer</p>
-					  <input type="text" class="form-control"  style="width:90%; margin-bottom: 15px; display:none;"
-							 id="answer-5-box" name="answer-5" value="{{ session.data['answer-5'] }}" style="width:90%; margin-bottom: 0px;">
+					  <div style="display:flex; flex-direction: row;  display:none;" id="answer-5-box">
+						  <input type="text" class="form-control"
+								 id="answer-5" name="answer-5" value="{{ session.data['answer-5'] }}" style="width:45%; margin-bottom: 15px; margin-right:20px;">
+						  <div class="multiple-choice">
+							  <input id="answer-5-checkbox" name="answer-5-checkbox" type="checkbox" value="yes">
+							  <label for="answer-5-checkbox">If selected request details</label>
+						  </div>
+					  </div>
 				  </div>
 
 			  </div>
@@ -283,7 +315,6 @@
 					  </div>
 				  </div>
 			  </div>
-
 		  </fieldset>
 
 
@@ -608,19 +639,19 @@
 	function show3()
 	{
 		document.getElementById('answer-3-add').style.display = 'none';
-		document.getElementById('answer-3-box').style.display = 'inline';
+		document.getElementById('answer-3-box').style.display = 'flex';
 		document.getElementById('answer-4-add').style.display = 'inline';
 	}
 	function show4()
 	{
 		document.getElementById('answer-4-add').style.display = 'none';
-		document.getElementById('answer-4-box').style.display = 'inline';
+		document.getElementById('answer-4-box').style.display = 'flex';
 		document.getElementById('answer-5-add').style.display = 'inline';
 	}
 	function show5()
 	{
 		document.getElementById('answer-5-add').style.display = 'none';
-		document.getElementById('answer-5-box').style.display = 'inline';
+		document.getElementById('answer-5-box').style.display = 'flex';
 	}
 
 
