--- a/app/views/create-event/template-reg.html
+++ b/app/views/create-event/template-reg.html
@@ -50,7 +50,8 @@
 
 			 Thank you for deciding to join us for the following event
 			  <br>
-			  <br>{{data['event-title']}}
+			  <br><span class="bold">{{data['event-title']}}</span>
+			  <br>[<a href="#">EVENT PAGE LINK</a>]
 			  <br>
 			  <br>{{ data['event-day-of-the-week'] }}
 			  <br>{{data['event-day'] }} {{ data['event-month-name'] }} {{ data['event-year'] }}
@@ -77,7 +78,6 @@
 
 					<textarea class="form-control" name="event-reg-body" id="event-reg-body" rows="20" style="width: 80%;"
 					>Remember to regularly check the event web page for latest additions to the agenda, confirmed speakers and experts.
-[EVENT PAGE LINK]
 
 If you have any questions or special requests that will help you to get the most out of the day, please don't hesitate to get in touch. We'd be happy to assist.
 
